04-Network-Security-and-Cluster-Lifecycle/demos/m1-network-policies/setup/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend
        image: nginxinc/nginx-unprivileged:stable-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  namespace: frontend
spec:
  selector:
    app: frontend-app
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
