04-Network-Security-and-Cluster-Lifecycle/demos/m1-network-policies/setup/expose-backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-app
  namespace: backend
spec:
  to:
    kind: Service
    name: backend-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
